Use reactive lobby client and utf-8 server port (#2317)
* Replace blocking server accessor with reactive implementation

Co-authored-by: Brutus5000 <Brutus5000@gmx.net>